feat : Update translation from Remote.

--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -29,11 +29,11 @@
   "bulkEditing": "Mehrfachbearbeitung",
   "cancel": "Abbrechen",
   "canton": "Kanton",
-  "casing": "Verrohrung",
+  "casing": "Ausbau",
   "casing_inner_diameter": "Verrohrung Innendurchmesser [mm]",
   "casing_outer_diameter": "Verrohrung Aussendurchmesser [mm]",
   "casingId": "Verrohrungs ID",
-  "casingName": "Name der Verrohrung",
+  "casingName": "Name des Ausbaus",
   "centerselected": "auf Auswahl zentrieren",
   "chronostratigraphy_top_bedrock": "Chronostratigraphie Top Fels",
   "city": "Stadt /Gemeinde",
@@ -86,22 +86,22 @@
   "errorGap": "Es gibt eine Lücke im Schichtverzeichnis",
   "errorGapSolution1": "Lücke mit \"nicht definierter Schicht\" füllen",
   "errorGapSolution2": "Basis der oberen Schicht mit Top der unteren Schicht ersetzen",
-  "errorGapSolution3": "Top der unteren Schicht mit o Metern ersetzen",
+  "errorGapSolution3": "Top der unteren Schicht mit 0 Metern ersetzen",
   "errorGapSolution4": "Top der unteren Schicht mit der Basis der oberen Schicht ersetzen",
   "errorHowToResolve": "Wie soll dieser Fehler behoben werden?",
   "errorLocked": "Bohrung durch den {{user}} gesperrt",
-  "errorMissingBedrock": "Tiefe Top Fels fehlt!",
-  "errorMissingBedrockSolution": "Tiefe Top Fels automatisch aus der Bohrdaten-Seite übernehmen.",
+  "errorMissingBedrock": "Tiefe Top Fels fehlt",
+  "errorMissingBedrockSolutionv": "Tiefe Top Fels automatisch aus der Bohrdaten-Seite übernehmen",
   "errorMissingLayer": "Fehlende Schicht",
   "errorMissingLayerSolution": "Bitte Schichten zwischen Geländeoberfläche und Top Fels (unten) ergänzen",
   "errorMoreerror": "{{number}} Fehler gefunden",
   "errorOneerror": "Ein Fehler gefunden",
   "errorOverlap": "Überlappende Schichten",
   "errorStartEditing": "Sie sollten die Schaltfläche \"Bearbeitung beginnen\" drücken",
-  "errorStartWrong": "Erste Schicht beginnt nicht an der Geländeoberfläche",
-  "errorWrongDepth": "Falsche Endtiefe",
+  "errorStartWrong": "Erste Schicht beginnt nicht auf dem Referenzniveau",
+  "errorWrongDepth": "Falsche Bohrendtiefe",
   "errorWrongDepthSolution1": "Tiefe der letzten Schicht ({{lDepth}} m) stimmt nicht mit der Endtiefe ({{bDepth}}) überein.",
-  "errrorStartPoint": "Sie sollten den Startpunkt hinzufügen",
+  "errrorStartPoint": "Sie sollten den Ansatzpunkt hinzufügen",
   "expand": "Aufklappen",
   "export": "Exportieren",
   "exportInProgress": "Export in Bearbeitung",
@@ -118,10 +118,10 @@
   "flowRestart": "Neustart des Arbeitsablaufs",
   "french": "Französisch",
   "from": "von",
-  "fromdepth": "von Tiefe [m]",
+  "fromdepth": "von Tiefe [m MD]",
   "fromdiameter": "von Durchmesser",
   "fromelevation": "von Höhe",
-  "fromMeters": "von [m]",
+  "fromMeters": "von [m MD]",
   "german": "Deutsch",
   "gradation": "Abstufung",
   "groundwater": "Grundwasser",
@@ -145,8 +145,8 @@
   "importDate": "Importdatum",
   "importedBy": "Importiert von",
   "importedData": "Importierte Daten",
-  "inclination": "Inklination (°)",
-  "inclination_direction": "Einfallsrichtung (°)",
+  "inclination": "Inklination beim Bohransatzpunkt (°)",
+  "inclination_direction": "Einfallsrichtung beim Bohransatzpunkt (°)",
   "inProgress": "in Bearbeitung",
   "instrument": "Instrumentierung",
   "instrumentId": "Instrument ID",
@@ -183,7 +183,7 @@
   "layer_notes": "Anmerkungen",
   "layer_organic_component": "Organische Komponenten",
   "layer_plasticity": "Plastizität",
-  "layer_qt_description": "Qualität Beschreibung",
+  "layer_qt_description": "Qualität der Beschreibung",
   "layer_striae": "Striemung",
   "layer_tectonic_unit": "Tektonische Einheit",
   "layer_uscs_1": "USCS 1",
@@ -267,14 +267,14 @@
   "search": "Suchen",
   "searchfilters": "Suchfilter",
   "searchFiltersBoreholes": "Suchfilter Bohrungen",
-  "searchFiltersLayers": "Stratigraphie-Schicht filter",
+  "searchFiltersLayers": "Suchfilter Stratigraphie",
   "setmanually": "Manuell einstellen",
   "show": "{{what}} anzeigen",
   "showAll": "Alle anzeigen",
   "showallfields": "Alle Felder anzeigen",
   "showHistory": "Verlauf anzeigen",
   "someSelected": "{{howMany}} Bohrungen ausgewählt",
-  "spud_date": "Bohrbeginn",
+  "spud_date": "Bohrbeginn Datum",
   "srs": "Räumliches Bezugssystem",
   "start": "Diese Seite ist auf Deutsch.",
   "status": "Status",
