--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -29,11 +29,11 @@
   "bulkEditing": "Bulk editing",
   "cancel": "Cancel",
   "canton": "Canton",
-  "casing": "Casing",
+  "casing": "Completion ",
   "casing_inner_diameter": "Casing inner diameter [mm]",
   "casing_outer_diameter": "Casing outer diameter [mm]",
   "casingId": "Casing ID",
-  "casingName": "Name of casing",
+  "casingName": "Name of completion",
   "centerselected": "center to selected",
   "chronostratigraphy_top_bedrock": "Chronostratigraphy top bedrock",
   "city": "City/Municipality",
@@ -67,8 +67,8 @@
   "disabling": "Disabling {{what}}",
   "done": "Done",
   "draft": "Draft",
-  "drill_diameter": "Drill diameter [mm]",
-  "drilling_end_date": "Drill end date",
+  "drill_diameter": "Borehole diameter [mm]",
+  "drilling_end_date": "End of drilling date",
   "drilling_method": "Drilling method",
   "duplicate": "Duplicated value: assign a new value.",
   "editingEnabled": "Editing started",
@@ -82,26 +82,24 @@
   "enabling": "Enabling {{what}}",
   "english": "English",
   "errorAttention": "Attention",
-  "errorEndPoint": "You should add end point",
+  "errorEndPoint": "You should add an end point",
   "errorGap": "There is an undefined interval in the sequence",
-  "errorGapSolution1": "Fill gap with \"undefined\" layer",
-  "errorGapSolution2": "Replace upper layer base with top from lower layer",
-  "errorGapSolution3": "Replace lower layer top with 0 meters",
-  "errorGapSolution4": "Replace lower layer top with base from upper layer",
-  "errorHowToResolve": "How to resolve this issue?",
+  "errorGapSolution2": "Replace base of upper layer with top from lower layer",
+  "errorGapSolution3": "Replace top of lower layer with 0 meters",
+  "errorGapSolution4": "Replace top of lower layer with base from upper layer",
+  "errorHowToResolve": "How should this isue be resolved?",
   "errorLocked": "Borehole locked by {{user}}",
-  "errorMissingBedrock": "Missing bedrock",
-  "errorMissingBedrockSolution": "Add the Bedrock automatically from data filled into the Borehole page.",
-  "errorMissingLayer": "Missing layers",
-  "errorMissingLayerSolution": "Please fill the space between the surface and the bedrock (below) adding new layers",
+  "errorMissingBedrock": "Missing top bedrock depth",
+  "errorMissingBedrockSolutionv": "Take the top bedrock depth automatically from the borehole page",
+  "errorMissingLayer": "Missing layer",
+  "errorMissingLayerSolution": "Please fill the space between the terrain and the bedrock below by adding new layers",
   "errorMoreerror": "{{number}} errors found",
   "errorOneerror": "One error found",
   "errorOverlap": "Overlapping layers",
-  "errorStartEditing": "You should press start editing button",
-  "errorStartWrong": "First layer not starting from the surface",
-  "errorWrongDepth": "Wrong depth",
+  "errorStartWrong": "First layer does not start at the reference level",
+  "errorWrongDepth": "Incorrect end depth",
   "errorWrongDepthSolution1": "End depth of last layer ({{lDepth}}) does not equal the borehole end depth {{bDepth}}.",
-  "errrorStartPoint": "You should add start point",
+  "errrorStartPoint": "You should add a start point",
   "expand": "Expand",
   "export": "Export",
   "exportInProgress": "Export in progress",
@@ -118,10 +116,10 @@
   "flowRestart": "Restart the workflow",
   "french": "French",
   "from": "from",
-  "fromdepth": "from depth [m]",
+  "fromdepth": "from depth [m MD]",
   "fromdiameter": "from diameter",
   "fromelevation": "from elevation",
-  "fromMeters": "from [m]",
+  "fromMeters": "from [m MD]",
   "german": "German",
   "gradation": "Gradation",
   "groundwater": "Groundwater",
@@ -145,8 +143,8 @@
   "importDate": "Import date",
   "importedBy": "Imported by",
   "importedData": "Imported data",
-  "inclination": "Inclination (°)",
-  "inclination_direction": "Inclination direction (°)",
+  "inclination": "Inclination at the top of the borehole (°)",
+  "inclination_direction": "Inclination direction at the top of the borehole(°)",
   "inProgress": "in progress",
   "instrument": "Instrumentation",
   "instrumentId": "Instrument ID",
@@ -183,7 +181,7 @@
   "layer_notes": "Notes",
   "layer_organic_component": "Organic components",
   "layer_plasticity": "Plasticity",
-  "layer_qt_description": "Quality description",
+  "layer_qt_description": "Quality of the description",
   "layer_striae": "Striations",
   "layer_tectonic_unit": "Tectonic Unit",
   "layer_uscs_1": "USCS 1",
@@ -267,7 +265,7 @@
   "search": "Search",
   "searchfilters": "Search filters",
   "searchFiltersBoreholes": "Borehole filters",
-  "searchFiltersLayers": "Stratigraphy layer(s) filters",
+  "searchFiltersLayers": "Stratigraphy filters",
   "setmanually": "Set manually",
   "show": "show {{what}}",
   "showAll": "Show all",
@@ -300,7 +298,7 @@
   "top_bedrock": "Top bedrock MD [m]",
   "top_bedrock_tvd": "Top bedrock TVD [m]",
   "top_bedrock_tvd_qt": "+/- Top bedrock TVD [m]",
-  "total_depth_tvd": "Total Depth TVD [m]",
+  "total_depth_tvd": "Total depth TVD [m]",
   "total_depth_tvd_qt": "+/- Total depth TVD [m]",
   "totaldepth": "Total depth MD [m]",
   "type": "Type",
