--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -29,11 +29,11 @@
   "bulkEditing": "Édition en bloc",
   "cancel": "Annuler",
   "canton": "Canton",
-  "casing": "Tubage",
+  "casing": "Aménagement",
   "casing_inner_diameter": "Diamètre intérieur du tubage [mm]",
   "casing_outer_diameter": "Diamètre extérieur du tubage [mm]",
   "casingId": "Tubage ID",
-  "casingName": "Nom du tubage",
+  "casingName": "Nom de l'aménagement",
   "centerselected": "centrer sur la sélection",
   "chronostratigraphy_top_bedrock": "Chronostratigraphie du toit du rocher",
   "city": "Ville/Commune",
@@ -82,26 +82,26 @@
   "enabling": "Activer {{what}}",
   "english": "Anglais",
   "errorAttention": "Attention",
-  "errorEndPoint": "Vous devriez ajouter le point final",
+  "errorEndPoint": "Veuillez ajouter la terminaison du forage",
   "errorGap": "Il y a une lacune dans la succession des couches",
-  "errorGapSolution1": "Remplir le vide avec un calque non défini",
-  "errorGapSolution2": "Remplacez la couche supérieure par le haut de la couche inférieure",
-  "errorGapSolution3": "Remplacer le haut de la couche inférieure par 0m",
-  "errorGapSolution4": "Remplacer le haut de la couche inférieure par la basede niveau supérieure",
-  "errorHowToResolve": "Comment résoudre ce problème?",
-  "errorLocked": "Modification en cours de l'utilisateur \"{{user}}\"",
-  "errorMissingBedrock": "Roche manquante",
-  "errorMissingBedrockSolution": "Crée automatiquement le substrat rocheux à partir des données saisiessur la page de forage.",
-  "errorMissingLayer": "Niveaux manquantes",
-  "errorMissingLayerSolution": "S'il vous plaît remplir l'espace entre la surface et le substrat rocheuxajout de nouveaux calques",
-  "errorMoreerror": "{{number}} erreurs constatées",
-  "errorOneerror": "Une erreur constatée",
-  "errorOverlap": "Calques superposés",
-  "errorStartEditing": "Vous devez appuyer sur le bouton: Commencer l’édition",
-  "errorStartWrong": "La première couche ne part pas de la surface",
-  "errorWrongDepth": "Mauvaise profondeur",
+  "errorGapSolution1": "Remplir la lacune avec une \"strate non définie\",\"Riempire la lacuna con uno \"strato non definito\",\"Fill gap with \"undefined\" layer",
+  "errorGapSolution2": "Remplacez la base de la couche supérieure par le sommet de la couche inférieure",
+  "errorGapSolution3": "Remplacer le sommet de la couche inférieure par 0 mètre",
+  "errorGapSolution4": "Remplacer le sommet de la couche inférieure par la base de la couche supérieure",
+  "errorHowToResolve": "Comment cette erreur doit-elle est résolue?",
+  "errorLocked": "Modification en cours par l'utilisateur {{user}}",
+  "errorMissingBedrock": "La profondeur du toit du rocher manque",
+  "errorMissingBedrockSolutionv": "Reprendre automatiquement la profondeur du toit du rocher à partir de la page des données de forage",
+  "errorMissingLayer": "Couche manquante",
+  "errorMissingLayerSolution": "Veuillez remplir l'espace entre la surface topographique et le toit du rocher en ajoutant de nouvelles couches",
+  "errorMoreerror": "{{number}} erreurs trouvées",
+  "errorOneerror": "Une erreur trouvée",
+  "errorOverlap": "Des couches se recouvrent",
+  "errorStartEditing": "Veuillez appuyer sur le bouton \"Commencer l’édition\",\"Per favore premere il pulsante \"iniziare la modifica\",\"You should press the \"start editing\" button",
+  "errorStartWrong": "La première couche ne débute pas au niveau de la reference altitudinale",
+  "errorWrongDepth": "Profondeur finale erronée",
   "errorWrongDepthSolution1": "La profondeur de la dernière couche ({{lDepth}}m) ne coïncide pas avec la profondeur totale du forage ({{bDepth}}m).",
-  "errrorStartPoint": "Vous devriez ajouter le point de départ",
+  "errrorStartPoint": "Veuillez ajouter le point de départ",
   "expand": "Étendre",
   "export": "Exporter",
   "exportInProgress": "Exportation en cours",
@@ -118,10 +118,10 @@
   "flowRestart": "Redémarrer le workflow",
   "french": "Français",
   "from": "de",
-  "fromdepth": "de la profondeur [m]",
+  "fromdepth": "de la profondeur [m MD]",
   "fromdiameter": "à partir du diamètre",
   "fromelevation": "de l'altitude",
-  "fromMeters": "de [m]",
+  "fromMeters": "de [m MD]",
   "german": "Allemand",
   "gradation": "Gradation",
   "groundwater": "Eau souterraine",
@@ -145,8 +145,8 @@
   "importDate": "Date d'importation",
   "importedBy": "Importé par",
   "importedData": "Données importées",
-  "inclination": "Inclinaison (°)",
-  "inclination_direction": "Direction d'inclinaison(°)",
+  "inclination": "Inclinaison à l’implantation sondage (°)",
+  "inclination_direction": "Direction d'inclinaison à l’implantation sondage (°)",
   "inProgress": "en cours",
   "instrument": "Instrumentation",
   "instrumentId": "ID de l'instrument",
@@ -243,9 +243,9 @@
   "publish": "Publier",
   "purpose": "But du forage",
   "qt_bore_inc_dir": " Précision de inclin. / direction ",
-  "qt_depth": "+/- profondeur MD [m]",
-  "qt_elevation": "+/- élévation niveau du terrain [m]",
-  "qt_location": "+/- coordonnées [m]",
+  "qt_depth": "+/- Profondeur MD [m]",
+  "qt_elevation": "+/- Élévation niveau du terrain [m]",
+  "qt_location": "+/- Coordonnées [m]",
   "qt_top_bedrock": "+/- Toit du rocher MD [m]",
   "reference_elevation": "Référence altitudinale [msl]",
   "reference_elevation_qt": "+/- Référence altitudinale [m]",
@@ -267,7 +267,7 @@
   "search": "Rechercher",
   "searchfilters": "Filtres de recherche",
   "searchFiltersBoreholes": "Filtres par forage",
-  "searchFiltersLayers": "Filtres par couche stratigraphique",
+  "searchFiltersLayers": "Filtres par stratigraphie",
   "setmanually": "Régler manuellement",
   "show": "Afficher {{what}}",
   "showAll": "Afficher tout",
