fix : Fix translation.

--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -84,7 +84,7 @@
   "errorAttention": "Achtung",
   "errorEndPoint": "Sie sollten den Endpunkt hinzufügen",
   "errorGap": "Es gibt eine Lücke im Schichtverzeichnis",
-  "errorGapSolution1": "Lücke mit \"nicht definierter Schicht\" füllen",
+  "errorGapSolution1": "Lücke mit 'nicht definierter Schicht' füllen",
   "errorGapSolution2": "Basis der oberen Schicht mit Top der unteren Schicht ersetzen",
   "errorGapSolution3": "Top der unteren Schicht mit 0 Metern ersetzen",
   "errorGapSolution4": "Top der unteren Schicht mit der Basis der oberen Schicht ersetzen",
@@ -97,7 +97,7 @@
   "errorMoreerror": "{{number}} Fehler gefunden",
   "errorOneerror": "Ein Fehler gefunden",
   "errorOverlap": "Überlappende Schichten",
-  "errorStartEditing": "Sie sollten die Schaltfläche \"Bearbeitung beginnen\" drücken",
+  "errorStartEditing": "Sie sollten die Schaltfläche 'Bearbeitung beginnen' drücken",
   "errorStartWrong": "Erste Schicht beginnt nicht auf dem Referenzniveau",
   "errorWrongDepth": "Falsche Bohrendtiefe",
   "errorWrongDepthSolution1": "Tiefe der letzten Schicht ({{lDepth}} m) stimmt nicht mit der Endtiefe ({{bDepth}}) überein.",
@@ -109,6 +109,7 @@
   "extendupper": "Obere Schicht nach unten ausdehnen",
   "facies_description": "Fazielle Beschreibung",
   "filling": "Hinterfüllung",
+  "fill_name": "Hinterfüllung name",
   "filterByHierarchicalUnits": "Nach hierarchischen Einheiten filtern",
   "filterbymap": "Mit Karteausschinitt filtern",
   "filterByName": "Nach Name filtern",
