--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -84,6 +84,7 @@
   "errorAttention": "Attention",
   "errorEndPoint": "You should add an end point",
   "errorGap": "There is an undefined interval in the sequence",
+  "errorGapSolution1": "Fill gap with 'undefined' layer",
   "errorGapSolution2": "Replace base of upper layer with top from lower layer",
   "errorGapSolution3": "Replace top of lower layer with 0 meters",
   "errorGapSolution4": "Replace top of lower layer with base from upper layer",
@@ -96,6 +97,7 @@
   "errorMoreerror": "{{number}} errors found",
   "errorOneerror": "One error found",
   "errorOverlap": "Overlapping layers",
+  "errorStartEditing": "You should press the 'start editing' button",
   "errorStartWrong": "First layer does not start at the reference level",
   "errorWrongDepth": "Incorrect end depth",
   "errorWrongDepthSolution1": "End depth of last layer ({{lDepth}}) does not equal the borehole end depth {{bDepth}}.",
@@ -107,6 +109,7 @@
   "extendupper": "Extend upper layer to bottom",
   "facies_description": "Facies description",
   "filling": "Backfill",
+  "fill_name": "Backfill name",
   "filterByHierarchicalUnits": "Filter by hierarchical units",
   "filterbymap": "Filter by map",
   "filterByName": "Filter by name",
