--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -84,7 +84,7 @@
   "errorAttention": "Attention",
   "errorEndPoint": "Veuillez ajouter la terminaison du forage",
   "errorGap": "Il y a une lacune dans la succession des couches",
-  "errorGapSolution1": "Remplir la lacune avec une \"strate non définie\",\"Riempire la lacuna con uno \"strato non definito\",\"Fill gap with \"undefined\" layer",
+  "errorGapSolution1": "Remplir la lacune avec une 'strate non définie'",
   "errorGapSolution2": "Remplacez la base de la couche supérieure par le sommet de la couche inférieure",
   "errorGapSolution3": "Remplacer le sommet de la couche inférieure par 0 mètre",
   "errorGapSolution4": "Remplacer le sommet de la couche inférieure par la base de la couche supérieure",
@@ -97,7 +97,7 @@
   "errorMoreerror": "{{number}} erreurs trouvées",
   "errorOneerror": "Une erreur trouvée",
   "errorOverlap": "Des couches se recouvrent",
-  "errorStartEditing": "Veuillez appuyer sur le bouton \"Commencer l’édition\",\"Per favore premere il pulsante \"iniziare la modifica\",\"You should press the \"start editing\" button",
+  "errorStartEditing": "Veuillez appuyer sur le bouton 'Commencer l'édition'",
   "errorStartWrong": "La première couche ne débute pas au niveau de la reference altitudinale",
   "errorWrongDepth": "Profondeur finale erronée",
   "errorWrongDepthSolution1": "La profondeur de la dernière couche ({{lDepth}}m) ne coïncide pas avec la profondeur totale du forage ({{bDepth}}m).",
@@ -109,6 +109,7 @@
   "extendupper": "Étendre la couche supérieure à la couche inférieure",
   "facies_description": "Description du faciès géologique",
   "filling": "Remplissage",
+  "fill_name": "Nom de remplissage",
   "filterByHierarchicalUnits": "Filtrer par unités hiérarchiques",
   "filterbymap": "Filtrer à partir de la carte",
   "filterByName": "Filtrer par nom",
