fix : Fix translation for Casing.

--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -29,7 +29,7 @@
   "bulkEditing": "Mehrfachbearbeitung",
   "cancel": "Abbrechen",
   "canton": "Kanton",
-  "casing": "Ausbau",
+  "casing": "Verrohrung",
   "casing_inner_diameter": "Verrohrung Innendurchmesser [mm]",
   "casing_outer_diameter": "Verrohrung Aussendurchmesser [mm]",
   "casingId": "Verrohrungs ID",
