--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -29,7 +29,7 @@
   "bulkEditing": "Bulk editing",
   "cancel": "Cancel",
   "canton": "Canton",
-  "casing": "Completion ",
+  "casing": "Casing",
   "casing_inner_diameter": "Casing inner diameter [mm]",
   "casing_outer_diameter": "Casing outer diameter [mm]",
   "casingId": "Casing ID",
@@ -109,7 +109,7 @@
   "extendupper": "Extend upper layer to bottom",
   "facies_description": "Facies description",
   "filling": "Backfill",
-  "fill_name": "Backfill name",
+  "fill_name": "Name of backfill",
   "filterByHierarchicalUnits": "Filter by hierarchical units",
   "filterbymap": "Filter by map",
   "filterByName": "Filter by name",
