--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -29,7 +29,7 @@
   "bulkEditing": "Édition en bloc",
   "cancel": "Annuler",
   "canton": "Canton",
-  "casing": "Aménagement",
+  "casing": "Tubage",
   "casing_inner_diameter": "Diamètre intérieur du tubage [mm]",
   "casing_outer_diameter": "Diamètre extérieur du tubage [mm]",
   "casingId": "Tubage ID",
