--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -29,7 +29,7 @@
   "bulkEditing": "Modifica in blocco",
   "cancel": "Annulla",
   "canton": "Cantone",
-  "casing": "Installazione ",
+  "casing": "Tubazione",
   "casing_inner_diameter": "Diametro interno della tubatura [mm]",
   "casing_outer_diameter": "Diametro esterno della tubatura [mm]",
   "casingId": "Tubazione ID",
