feat (#49) : Add no casing translation.

--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -229,6 +229,7 @@
   "new": "Neue {{what}}",
   "newBorehole": "Neue Bohrung",
   "no": "Nein",
+  "no_casing": "Keine Verrohrung",
   "noComments": "Keine Kommentare",
   "nothingToShow": "Nichts zu zeigen",
   "np": "Keine Angabe",
