--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -229,6 +229,7 @@
   "new": "New {{what}}",
   "newBorehole": "New borehole",
   "no": "No",
+  "no_casing": "No casing",
   "noComments": "No comments",
   "nothingToShow": "Nothing to display",
   "np": "Unknown",
