--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -229,6 +229,7 @@
   "new": "Nouveau {{what}}",
   "newBorehole": "Nouveau forage",
   "no": "Non",
+  "no_casing": "Pas de tubage",
   "noComments": "Aucun commentaire",
   "nothingToShow": "Rien à montrer",
   "np": "Inconnu",
