--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -229,6 +229,7 @@
   "new": "Nuovo {{what}}",
   "newBorehole": "Nuova perforazione",
   "no": "No",
+  "no_casing": "Senza tubazione",
   "noComments": "Nessun commento",
   "nothingToShow": "Niente da mostrare",
   "np": "Sconosciuto",
