fear : Add new translations.

--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -40,7 +40,6 @@
   "clickLayer": "Klicken Sie für mehr Informationen",
   "close": "Schliessen",
   "collapse": "Minimieren",
-  "coordinates": "Koordinaten",
   "completion": "Ausbau",
   "confirm": "Bestätigen",
   "copy": "Kopie erstellen",
@@ -110,7 +109,7 @@
   "extendupper": "Obere Schicht nach unten ausdehnen",
   "facies_description": "Fazielle Beschreibung",
   "filling": "Hinterfüllung",
-  "fill_name": "Hinterfüllung name",
+  "fill_name": "Hinterfüllung Name",
   "filterByHierarchicalUnits": "Nach hierarchischen Einheiten filtern",
   "filterbymap": "Mit Karteausschinitt filtern",
   "filterByName": "Nach Name filtern",
@@ -120,7 +119,6 @@
   "flowRestart": "Neustart des Arbeitsablaufs",
   "french": "Französisch",
   "from": "von",
-  "fromDegree": "von Grad",
   "fromdepth": "von Tiefe [m MD]",
   "fromdiameter": "von Durchmesser",
   "fromelevation": "von Höhe",
@@ -297,11 +295,10 @@
   "sure": "Sind Sie sicher?",
   "terms": "Nutzungsbedingungen",
   "title": "BDMS",
-  "toDegree": "bis Grad",
   "todepth": "bis Tiefe MD [m]",
   "todiameter": "bis Durchmesser",
   "toelevation": "bis Höhe",
-  "toMeters": "bis [m]",
+  "toMeters": "bis [m MD]",
   "top_bedrock": "Top Fels MD [m]",
   "top_bedrock_tvd": "Top Fels TVD [m]",
   "top_bedrock_tvd_qt": "+/- Top Fels TVD [m]",
@@ -333,5 +330,8 @@
   "searchFilterFilling": "Suchfilter Hinterfüllung",
   "mainCompletion": "Dies ist der Hauptausbau",
   "export_database": "Export einer Arbeitsgruppe oder Bohrung in eine gezippte .gpkg-Datei",
-  "import_database": "Bitte importieren Sie eine gezippte .gpkg-Datei (nur swissforages-Exporte) einer Arbeitsgruppe oder Bohrung."
+  "import_database": "Bitte importieren Sie eine gezippte .gpkg-Datei (nur swissforages-Exporte) einer Arbeitsgruppe oder Bohrung.",
+  "coordinates": "Koordinaten",
+  "import": "Importieren",
+  "to": "bis"
 }
