--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -40,6 +40,7 @@
   "clickLayer": "Click on a layer for more details",
   "close": "Close",
   "collapse": "Collapse",
+  "coordinates": "Coordinates",
   "completion": "Completion",
   "confirm": "Confirm",
   "copy": "Create a copy",
@@ -119,6 +120,7 @@
   "flowRestart": "Restart the workflow",
   "french": "French",
   "from": "from",
+  "fromDegree": "from Degrees",
   "fromdepth": "from depth [m MD]",
   "fromdiameter": "from diameter",
   "fromelevation": "from elevation",
@@ -295,6 +297,7 @@
   "sure": "Are you sure?",
   "terms": "Terms of service",
   "title": "BMS",
+  "toDegree": "to Degrees",
   "todepth": "to depth MD [m]",
   "todiameter": "to diameter",
   "toelevation": "to elevation",
@@ -331,7 +334,6 @@
   "mainCompletion": "This is the main completion",
   "export_database": "Export of a workgroup or borehole in a zipped .gpkg file",
   "import_database": "Please import a zipped .gpkg file (swissforages exports only) of a workgroup or borehole.",
-  "coordinates": "Coordinates",
   "import": "Import",
   "to": "to"
 }
