--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -40,6 +40,7 @@
   "clickLayer": "Cliccare per ulteriori informazioni",
   "close": "Chiudere",
   "collapse": "Minimizzare",
+  "coordinates": "Coordinate",
   "completion": "Installazione",
   "confirm": "Confermare",
   "copy": "Creare una copia",
@@ -119,6 +120,7 @@
   "flowRestart": "Riavviare il workflow",
   "french": "Francese",
   "from": "da",
+  "fromDegree": "da Gradi",
   "fromdepth": "dalla profondità [m MD]",
   "fromdiameter": "a partire dal diametro",
   "fromelevation": "a partire dalla quota",
@@ -295,6 +297,7 @@
   "sure": "Ne é sicuro?",
   "terms": "Condizioni di utilizzo",
   "title": "BMS",
+  "toDegree": "fino a Gradi",
   "todepth": "fino alla profondità MD [m]",
   "todiameter": "fino al diametro",
   "toelevation": "fino alla quota",
@@ -331,7 +334,6 @@
   "mainCompletion": "Questa è l'installazione principale",
   "export_database": "Esportazione di un gruppo di lavoro o di una perforazione in un file .gpkg zippato",
   "import_database": "Per favore importare un file .gpkg zippato (valido unicamente per le esportazioni da swissforages) di un gruppo di lavoro o di una perforazione.",
-  "coordinates": "Coordinate",
   "import": "Importare",
   "to": "fino a"
 }
