feat (#23) : Update translation for selectAll and deSelectAll.

--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -272,6 +272,7 @@
   "searchfilters": "Suchfilter",
   "searchFiltersBoreholes": "Suchfilter Bohrungen",
   "searchFiltersLayers": "Suchfilter Stratigraphie",
+  "selectAll": "Alle auswählen",
   "setmanually": "Manuell einstellen",
   "show": "{{what}} anzeigen",
   "showAll": "Alle anzeigen",
@@ -315,6 +316,7 @@
   "uploaded": "Hochgeladen",
   "uploadFile": "Wählen Sie eine Datei (*.csv) aus",
   "uploadNewFile": "Hochladen einer neuen Datei",
+  "unselectAll": "Alle abwählen",
   "user": "Benutzer",
   "username": "Benutzername",
   "usersMap": "Karten für Benutzer",
