--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -272,6 +272,7 @@
   "searchfilters": "Search filters",
   "searchFiltersBoreholes": "Borehole filters",
   "searchFiltersLayers": "Stratigraphy filters",
+  "selectAll": "Select all",
   "setmanually": "Set manually",
   "show": "show {{what}}",
   "showAll": "Show all",
@@ -315,6 +316,7 @@
   "uploaded": "Uploaded",
   "uploadFile": "Select a CSV file to upload",
   "uploadNewFile": "Upload a new file",
+  "unselectAll": "Unselect all",
   "user": "User",
   "username": "Username",
   "usersMap": "Maps for users",
