--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -272,6 +272,7 @@
   "searchfilters": "Filtres de recherche",
   "searchFiltersBoreholes": "Filtres par forage",
   "searchFiltersLayers": "Filtres par stratigraphie",
+  "selectAll": "Tout sélectionner",
   "setmanually": "Régler manuellement",
   "show": "Afficher {{what}}",
   "showAll": "Afficher tout",
@@ -315,6 +316,7 @@
   "uploaded": "Téléchargé",
   "uploadFile": "Sélectionnez le fichier CSV à télécharger",
   "uploadNewFile": "Télécharger un nouveau fichier",
+  "unselectAll": "Tout désélectionner",
   "user": "Utilisateur",
   "username": "Nom d'utilisateur",
   "usersMap": "Cartes pour les utilisateurs",
