--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -272,6 +272,7 @@
   "searchfilters": "Filtri di ricerca",
   "searchFiltersBoreholes": "Filtri specifici alla perforazione",
   "searchFiltersLayers": "Filtri specifici alla stratigrafia",
+  "selectAll": "Seleziona tutto",
   "setmanually": "Impostare manualmente",
   "show": "Mostra {{what}}",
   "showAll": "Mostra tutti",
@@ -315,6 +316,7 @@
   "uploaded": "Caricamento",
   "uploadFile": "Seleziona il file CSV da caricare",
   "uploadNewFile": "Caricare un nuovo file",
+  "unselectAll": "Deseleziona tutto",
   "user": "Utente",
   "username": "Nome utente",
   "usersMap": "Mappe dell'utente",
